Moved the css files into a styles folder, created a utils folder for localStorage functions, added localStorage functionality to the toDo along with editing ability

--- a/todo/src/styles/App.css
+++ b/todo/src/styles/App.css
@@ -11,6 +11,13 @@ body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+form {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+
 .input {
   background-color: var(--bg-light);
   color: var(--text);
