--- a/todo/src/styles/ToDoList.css
+++ b/todo/src/styles/ToDoList.css
@@ -1,8 +1,13 @@
 .item-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    max-height: 15rem;
-    overflow-y: auto;
-    padding-right: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: center;
 }
+
+.todo,
+.item-div {
+    flex: 1 1 clamp(250px, 30%, 320px);
+    max-width: 300px;
+}
+
