--- a/todo/src/styles/App.css
+++ b/todo/src/styles/App.css
@@ -11,12 +11,24 @@ body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
-form {
+.app-container {
   display: flex;
-  gap: 0.5rem;
+  flex-direction: column;
   align-items: center;
 }
 
+.form-wrapper {
+  width: 100%;
+  max-width: 600px;
+  margin-bottom: 2rem;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
 
 .input {
   background-color: var(--bg-light);
